tests/resource/valid/control_flow/matches_in_if.mamba
def x:= if True then
    match 10
        2 => 3
        _ => 4
else
    match 20
        _ => 2
